added title to index file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> AGO McAGO </title>
+    <title> AGO McAGO commits </title>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
-
-    <h1> AGO McAGO </h1>
 
   </body>
 </html>
